--- a/web/web/themes/default/frame.css
+++ b/web/web/themes/default/frame.css
@@ -198,6 +198,7 @@ div.line {display:block;width:1px;height:3px;margin:0px;padding:0px;overflow:hid
 .pageview input {line-height:16px;height:16px;text-align:center;}
 .pageview input.input{width:25px;border:#7998c6 solid 1px;font-size:12px;}
 .pageview input.go   {width:22px;cursor:pointer;border:none;background:url(img/pageview/go.gif) 0px 0px no-repeat;font-size:10px;font-weight:bold;}
+.pageview select {line-height:18px;height:18px;width:40px;text-align:center;cursor:pointer;border:none;border:#7998c6 solid 1px;}
 
 
 /*---表单表格样式---*/
