--- a/CodeBuilder/builder/template/csharp/get.vm
+++ b/CodeBuilder/builder/template/csharp/get.vm
@@ -32,7 +32,7 @@ ${mf}${Frame.ToLower()}.callback = function(){if(${mf}${Frame.ToLower()}.result.
 	<tr>
 		<td class="input">
 #foreach($col in $vo.ColumnList)#if($col.ColumnName!=$pk)
-			&nbsp;$col.Comment：<input type="text" name="$col.ColumnName.ToLower()" value="@Request["$col.ColumnName.ToLower()"]" />
+			&nbsp;$col.Comment：<input type="text" class="text" name="$col.ColumnName.ToLower()" value="@Request["$col.ColumnName.ToLower()"]" />
 #end#end
 		</td>
 		<td class="query"><input id="_querySubmit_" type="button" class="button" value="查询" /></td>
