--- a/DsWorkAndroid/res/values/color.xml
+++ b/DsWorkAndroid/res/values/color.xml
@@ -3,6 +3,7 @@
      <color name="gray">#dddddd</color>
      <color name="white">#ffffff</color>
      <color name="blue">#0000ff</color>
+     <color name="blue_light">#90D1E9</color>
      <color name="red">#ff0000</color>
      <color name="green">#00db00</color>
 </resources>
