--- a/CodeBuilder/htmlgen/template/get.vm
+++ b/CodeBuilder/htmlgen/template/get.vm
@@ -18,11 +18,8 @@
 $dswork.showNavTitle = "${tableName}";
 $(function(){$dswork.showNavigation($dswork.showNavTitle);});
 </script>
-<style type="text/css">
-.bottomTable{padding:0;margin:0;width:100%;position:fixed;_position:absolute;left:0px;bottom:0;border-top:#c2c2c2 solid 1px;}
-.listTable {margin:2px 0px 41px 0px;}
-</style>
-<!--[if lte IE 6]><style type="text/css">html,body{padding:0;margin:0;_height:100%;_overflow:hidden;}body{_overflow:scroll;}</style><![endif]-->
+<style>.bottomTable{padding:0;margin:0;width:100%;position:fixed;left:0;bottom:0;border-top:#c2c2c2 solid 1px;}.listTable{margin-bottom:20px;}</style>
+<!--[if IE 6]><style>.bottomTable{position:absolute;left:0;top:expression(eval(document.documentElement.scrollTop+document.documentElement.clientHeight-this.offsetHeight-parseInt(this.currentStyle.marginTop)-parseInt(this.currentStyle.marginBottom)))}</style><![endif]-->
 <script type="text/javascript">
 ${tmp}(function()
 {
