--- a/web/web/themes/default/frame.css
+++ b/web/web/themes/default/frame.css
@@ -1,4 +1,3 @@
-/*IE6背景图缓存BUG*/
 * {filter:expression(document.execCommand("BackgroundImageCache", false, true));}
 /* {filter:gray;}*/
 
@@ -186,8 +185,7 @@ table.listLogo td.title {text-align:left;}
 
 table.listLogo td,
 .listTable tr.list_title td,
-.listTable tr.list_title th
-{
+.listTable tr.list_title th {
   background-color: #E0ECFF;
   background: -webkit-linear-gradient(top,#EFF5FF 0,#E0ECFF 100%);
   background: -moz-linear-gradient(top,#EFF5FF 0,#E0ECFF 100%);
@@ -196,7 +194,6 @@ table.listLogo td,
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#EFF5FF,endColorstr=#E0ECFF,GradientType=0);
 }
-
 
 
 /*---翻页导航---*/
@@ -211,7 +208,7 @@ table.listLogo td,
 .pageview a.prev {width:38px;padding-left: 13px;background:url(img/pageview/prev.gif ) no-repeat;background-position:left center;}
 .pageview a.next {width:38px;padding-right:13px;background:url(img/pageview/next.gif ) no-repeat;background-position:right center;}
 .pageview a.last {width:38px;padding-right:14px;background:url(img/pageview/last.gif ) no-repeat;background-position:right center;}/**/
-.pageview input {line-height:16px;height:16px;text-align:center;}
+.pageview input      {line-height:16px;height:16px;text-align:center;}
 .pageview input.input{width:25px;border:#7998c6 solid 1px;font-size:12px;}
 .pageview input.go   {width:22px;cursor:pointer;border:none;background:url(img/pageview/go.gif) 0px 0px no-repeat;font-size:10px;font-weight:bold;}
 .pageview select {line-height:18px;height:18px;width:40px;text-align:center;cursor:pointer;border:none;border:#7998c6 solid 1px;}
