--- a/CodeBuilder/htmlgen/template/get.vm
+++ b/CodeBuilder/htmlgen/template/get.vm
@@ -6,7 +6,7 @@
 <html>
 <head>
 	<title>${tableName}</title>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<meta charset="UTF-8" />
 <link rel="stylesheet" type="text/css" href="../../../web/js/easyui/themes/default/easyui.css">
 <link rel="stylesheet" type="text/css" href="../../../web/themes/default/frame.css" />
 <script type="text/javascript" src="../../../web/js/jquery/jquery.js"></script>
