--- a/web/share/dswork/Views/Commons/Page.cshtml
+++ b/web/share/dswork/Views/Commons/Page.cshtml
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>@RenderSection("title", false)</title>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<meta charset="UTF-8" />
 <link rel="stylesheet" type="text/css" href="/web/js/easyui/themes/default/easyui.css">
 <link rel="stylesheet" type="text/css" href="/web/themes/default/frame.css" />
 <script type="text/javascript" src="/web/js/jquery/jquery.js"></script>
