--- a/DsWorkAndroid/res/layout/demo_get_f.xml
+++ b/DsWorkAndroid/res/layout/demo_get_f.xml
@@ -29,7 +29,7 @@
 	        android:layout_width="match_parent"
 	        android:layout_height="match_parent" 
 	        android:layout_marginLeft="10dip"
-	   		android:layout_marginRight="10dip"
+	   		android:scrollbarStyle="outsideInset"
 	        android:fastScrollEnabled="true"/>
 	</LinearLayout>
 </FrameLayout>
