--- a/CodeBuilder/builder/template/java/hdao.vm
+++ b/CodeBuilder/builder/template/java/hdao.vm
@@ -34,7 +34,7 @@ import org.hibernate.criterion.Restrictions;
 import org.springframework.stereotype.Repository;
 
 @Repository
-@SuppressWarnings("unchecked")
+@SuppressWarnings("all")
 public class ${Model}Dao extends HibernateBaseDao<${Model}, Long>
 {
 	@Override
