--- a/DsWorkAndroid/res/layout/person_get_item.xml
+++ b/DsWorkAndroid/res/layout/person_get_item.xml
@@ -25,11 +25,13 @@
 		    android:textSize="22sp"
 		    android:id="@+id/sortkey"/>
   	</LinearLayout>
+  	<!-- 使用ItemMenuDialog
 	<include 
 	    layout="@layout/item_menu" 
 	    android:layout_width="wrap_content" 
 	    android:layout_height="wrap_content"
 	    android:layout_alignParentRight="true"/>
+  	 -->
   	<include 
   	    layout="@layout/item_chk" 
   	    android:layout_width="wrap_content" 
