--- a/CodeBuilder/htmlgen/template/edit.vm
+++ b/CodeBuilder/htmlgen/template/edit.vm
@@ -3,8 +3,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <title></title>
-<meta charset="UTF-8" />
 <link rel="stylesheet" type="text/css" href="../../../web/js/easyui/themes/default/easyui.css">
 <link rel="stylesheet" type="text/css" href="../../../web/themes/default/frame.css" />
 <script type="text/javascript" src="../../../web/js/jquery/jquery.js"></script>
