--- a/CodeBuilder/htmlgen/template/get.vm
+++ b/CodeBuilder/htmlgen/template/get.vm
@@ -5,8 +5,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>${tableName}</title>
-<meta charset="UTF-8" />
+<meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
+<title></title>
 <link rel="stylesheet" type="text/css" href="../../../web/js/easyui/themes/default/easyui.css">
 <link rel="stylesheet" type="text/css" href="../../../web/themes/default/frame.css" />
 <script type="text/javascript" src="../../../web/js/jquery/jquery.js"></script>
