--- a/CodeBuilder/builder/template/java/jsp/get.vm
+++ b/CodeBuilder/builder/template/java/jsp/get.vm
@@ -17,7 +17,7 @@ request.setAttribute("param", map);
 <!DOCTYPE html>
 <html>
 <head>
-	<title>${vo.TableComment}</title>
+	<title></title>
 	<%@include file="/commons/include/get.jsp" %>
 <script type="text/javascript">
 ${mf}(function(){
