--- a/web/share/dswork/Views/Commons/Page.cshtml
+++ b/web/share/dswork/Views/Commons/Page.cshtml
@@ -1,8 +1,8 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
+<meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <title>@RenderSection("title", false)</title>
-<meta charset="UTF-8" />
 <link rel="stylesheet" type="text/css" href="/web/js/easyui/themes/default/easyui.css">
 <link rel="stylesheet" type="text/css" href="/web/themes/default/frame.css" />
 <script type="text/javascript" src="/web/js/jquery/jquery.js"></script>
