--- a/web/share/dswork/Views/Commons/UpdAjax.cshtml
+++ b/web/share/dswork/Views/Commons/UpdAjax.cshtml
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
+<meta charset="UTF-8" />
 <title>@RenderSection("title", false)</title>
 <link rel="stylesheet" type="text/css" href="/web/js/easyui/themes/default/easyui.css">
 <link rel="stylesheet" type="text/css" href="/web/themes/default/frame.css" />
@@ -12,10 +12,6 @@
 <script type="text/javascript">$dswork.dotnet = true;</script>
 <script type="text/javascript" src="/web/js/dswork/dswork.js"></script>
 <script type="text/javascript" src="/web/js/dswork/form.js"></script>
-<script type="text/javascript">
-    $dswork.showNavTitle = "\u4fee\u6539";
-    $(function(){$dswork.showNavigation($dswork.showNavTitle);});
-</script>
 <script type="text/javascript">$dswork.doAjax = true;</script>
 @RenderSection("head", false)
 </head>
