--- a/web/share/dswork/Views/Commons/Get.cshtml
+++ b/web/share/dswork/Views/Commons/Get.cshtml
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
+<meta charset="UTF-8" />
 <title>@RenderSection("title", false)</title>
 <link rel="stylesheet" type="text/css" href="/web/js/easyui/themes/default/easyui.css">
 <link rel="stylesheet" type="text/css" href="/web/themes/default/frame.css" />
@@ -12,10 +12,6 @@
 <script type="text/javascript">$dswork.dotnet = true;</script>
 <script type="text/javascript" src="/web/js/dswork/dswork.js"></script>
 <script type="text/javascript" src="/web/js/dswork/get.js"></script>
-<script type="text/javascript">
-    $dswork.showNavTitle = "\u5217\u8868";
-    $(function(){$dswork.showNavigation($dswork.showNavTitle);});
-</script>
 <style>.bottomTable{padding:0;margin:0;width:100%;position:fixed;left:0;bottom:0;border-top:#c2c2c2 solid 1px;}.listTable{margin-bottom:35px;}</style>
 <!--[if IE 6]><style>.bottomTable{position:absolute;left:0;top:expression(eval(document.documentElement.scrollTop+document.documentElement.clientHeight-this.offsetHeight-parseInt(this.currentStyle.marginTop)-parseInt(this.currentStyle.marginBottom)))}</style><![endif]-->
 @RenderSection("head", false)
