--- a/DsWorkAndroid/res/layout/activity_loadmore.xml
+++ b/DsWorkAndroid/res/layout/activity_loadmore.xml
@@ -43,5 +43,19 @@
 	        android:layout_height="fill_parent"
 	        android:id="@+id/mListView"
 	        />
+		<!-- 
+		<com.handmark.pulltorefresh.library.PullToRefreshListView
+	        android:id="@+id/pull_refresh_list"
+	        android:layout_width="fill_parent"
+	        android:layout_height="fill_parent"
+	        android:cacheColorHint="#00000000"
+	        android:divider="#19000000"
+	        android:dividerHeight="4dp"
+	        android:fadingEdge="none"
+	        android:fastScrollEnabled="false"
+	        android:footerDividersEnabled="false"
+	        android:headerDividersEnabled="false"
+	        android:smoothScrollbar="true" />
+		 -->
 	</LinearLayout>
 </LinearLayout>
