--- a/CodeBuilder/builder/template/csharp/upd.vm
+++ b/CodeBuilder/builder/template/csharp/upd.vm
@@ -31,7 +31,7 @@
 #if($colName!=$pk)
 	<tr>
 		<td class="form_title">$columnList.Comment</td>
-		<td class="form_input"><input type="text" name="$colName.ToLower()" value="@ViewBag.po.$colName.ToLower()" /></td>
+		<td class="form_input"><input type="text" name="$colName.ToLower()" maxlength="100" value="@ViewBag.po.$colName.ToLower()" /></td>
 	</tr>
 #end
 #end
