--- a/web/web/js/jskey/themes/calendar/default/skin.css
+++ b/web/web/js/jskey/themes/calendar/default/skin.css
@@ -1,4 +1,4 @@
-.WebDate, .ShowDate {cursor:pointer;border:1px solid #999999;height:16px;background:#ffffff url(../datePicker.gif) no-repeat right;}
+.WebDate {cursor:pointer;border:1px solid #999999;height:16px;background:#ffffff url(../datePicker.gif) no-repeat right;}
 /*容器*/
 div.CalendarPanel {width:176px;background-color:#ffffff;border:1px solid #63a3e9;font-size:12px;}
 /*####################年月选择部分####################*/
